# OCR.EPITA.SPE.S3

./: .clang-format  .gitignore  .mailmap  AUTHORS  CMakeLists.txt  Makefile  README
.github/: CODEOWNERS
libs/: CMakeLists.txt
libs/image_processing/: CMakeLists.txt
libs/image_processing/include/: image_processing.h
libs/image_processing/src/: image_processing.c
libs/image_processing/test/: CMakeLists.txt  image_processing_test.c
libs/image_processing/tools/: CMakeLists.txt  mkdataset.c
libs/image_processing_unused/: CMakeLists.txt
libs/image_processing_unused/include/: image_processing.h
libs/image_processing_unused/src/: image_processing.c
libs/neural_network/: CMakeLists.txt
libs/neural_network/include/: neural_network.h
libs/neural_network/src/: neural_network.c  simple_gates.c  xor.c
libs/neural_network/test/: CMakeLists.txt  neural_network_test.c
libs/neural_network/tools/: CMakeLists.txt  trainer.c
libs/sudoku_solver/: CMakeLists.txt
libs/sudoku_solver/include/: sudoku_solver.h
libs/sudoku_solver/include/sudoku_solver/: sudoku_solver.h
libs/sudoku_solver/src/: sudoku_solver.c
libs/sudoku_solver/test/: CMakeLists.txt  sudoku_solver_test.c
libs/sudoku_solver/test/grid/: .gitignore
libs/sudoku_solver/tools/: CMakeLists.txt  solver.c
libs/sudoku_solver_hexa/: CMakeLists.txt
libs/sudoku_solver_hexa/include/: sudoku_solver_hexa.h
libs/sudoku_solver_hexa/src/: sudoku_solver_hexa.c
libs/sudoku_solver_hexa/test/grid_hexa/: grid_1  grid_beginner  grid_expert  supposed_beginner  supposed_expert
libs/sudoku_solver_hexa/tools/: CMakeLists.txt  solver_hexa.c
ocr_sudoku_solver/: CMakeLists.txt
ocr_sudoku_solver/src/: app.glade  main.c
tools/: solver.c
website/: index.html  index1.html  pdf.html  style.css
